tests/int/use_command/snapshots/integration__int__use_command__visibility__restricted__modules_visibility__restricted_mod_vis_r_e_format_grouped.snap
---
source: tests/int/use_command/visibility.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - use
    - "visibility::restricted_mod"
    - "-r"
    - "-e"
    - "--format"
    - grouped
---
success: true
exit_code: 0
----- stdout -----
visibility::restricted_mod
 - crate::nesting

----- stderr -----
